# alta

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  SConstruct  setpath.sh
configs/cmake/: CeresConfig.cmake  FindNLOPT.cmake
configs/scons/: config-linux-gcc.py  config-macos-clang.py  config-windows-appveyor.py  config-windows-cl.py
data/brdf/: pink-felt-1d.alta
documents/: contacts.dox  contribute.dox  doxygen.xml  install.dox  mainpage.dox  tutorials.dox
sources/core/: args.h  common.h  data.h  data_storage.cpp  data_storage.h  function.cpp  function.h  params.cpp  params.h  plugins_manager.cpp  rational_function.cpp  rational_function.h  vertical_segment.cpp  vertical_segment.h
sources/plugins/: SConscript
sources/plugins/data_interpolants/: grid.cpp
sources/plugins/data_io/: EXR_IO.h  SConscript  astm.cpp  merl.cpp  slice.cpp  utia.cpp
sources/plugins/nonlinear_fitter_eigen/: SConscript
sources/plugins/nonlinear_fitter_nlopt/: fitter.cpp
sources/plugins/nonlinear_function_diffuse/: function.h
sources/plugins/nonlinear_function_lafortune/: function.cpp  function.h
sources/plugins/nonlinear_function_spherical_gaussian/: function.cpp  function.h
sources/plugins/nonlinear_shadowing_schlick/: function.cpp  function.h
sources/plugins/nonlinear_shadowing_smith/: function.h
sources/plugins/rational_fitter_eigen/: rational_fitter.cpp
sources/plugins/rational_fitter_quadprog/: rational_fitter.cpp
sources/plugins/rational_fitters/: eigen.cpp  leastsquare.cpp  quadprog.cpp  quadprog_parallel.cpp
sources/plugins/rational_function_chebychev/: rational_function.cpp
sources/plugins/rational_function_legendre/: rational_function.cpp
sources/python/: SConscript  alta.cpp  wrapper_args.h  wrapper_data.h  wrapper_vec.h
sources/scripts/: installer.nsi
sources/softs/brdf2data/: main.cpp
sources/softs/data2brdf/: main.cpp
sources/softs/data2data/: main.cpp
sources/softs/data2stats/: data2stats.cpp
sources/tests/: SConscript  Test_Smooth_Step_1d_Asymetric_vs.txt  Test_Smooth_Step_1d_no_vs.txt  Test_Smooth_Step_1d_pure_symetric_vs.txt  Test_Smooth_Step_1d_symetric_vs.txt  non_reg_fit_Test_Smooth_Step_1d_Asymetric_vs.func  non_reg_fit_Test_Smooth_Step_1d_no_vs.func  nonreg_fit_kirby2_qp_slidingwindows.txt  nonreg_fit_kirby2_qp_worstfirst.txt  nonreg_fit_kirby2_qp_worstsetfirst.txt  test_utilities.py
sources/tests/core/: conversion-catch-1.cpp  data-io.cpp  params-test-2.cpp
sources/tests/python/: test-arguments.py  test-python-function.py  test-vec.py
